ubiquity (1.3.3) UNRELEASED; urgency=low

  * GTK frontend: Move intro label widget from code to glade.
  * GTK frontend: Work around disappearing input focus on intro page.
  * GTK frontend: Activate Forward button when a row in the language or
    keyboard treeviews is activated.
  * Remove use of dh_python, since it's a no-op now. Bump debhelper
    build-dependency to 5.0.37.3ubuntu2 (a.k.a. dh_python from 5.0.38) for
    this.
  * KDE frontend: Remove tabstop for new_size_scale from .ui file, since
    that widget doesn't exist there any more.
  * KDE frontend: Fix logo image widgets to take account of removed disk
    page.
  * KDE frontend: Fix various crashes in set_autopartition_choices due to
    botched use of Qt.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu,  7 Dec 2006 09:55:28 +0000

ubiquity (1.3.2) feisty; urgency=low

  * Update to new partman-auto, merging the "Select a disk" page into
    "Prepare disk space".
  * Automatic update of included source packages: debian-installer-utils
    1.41ubuntu1, partman-auto 60ubuntu2, partman-base 97ubuntu2,
    partman-basicfilesystems 49ubuntu1, partman-basicmethods 32, partman-efi
    11, partman-ext3 43, partman-jfs 18, partman-newworld 15,
    partman-partitioning 44ubuntu1, partman-reiserfs 32, partman-target
    46ubuntu1, partman-xfs 30.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu,  7 Dec 2006 00:02:42 +0000

ubiquity (1.3.1) feisty; urgency=low

  * Strip out unnecessary parts from console-setup source (accidental due to
    semi-manual update).
  * Depend on a version of console-setup at least as new as the one in our
    source tree.
  * Work around a crash in broken_packages() due to inadequate python-apt
    Python protocol support.
  * Fix crash if auto_mountpoints somehow ends up still set to None while
    validating partitions (LP: #71046).
  * Fix infinite loop while creating initial-status log.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri,  1 Dec 2006 11:03:11 +0000
