@@ -1,5 +1,6 @@
 ubiquity (1.3.3) UNRELEASED; urgency=low
 
+  [ Colin Watson ]
   * GTK frontend: Move intro label widget from code to glade.
   * GTK frontend: Work around disappearing input focus on intro page.
   * GTK frontend: Activate Forward button when a row in the language or
@@ -13,6 +14,10 @@ ubiquity (1.3.3) UNRELEASED; urgency=low
     page.
   * KDE frontend: Fix various crashes in set_autopartition_choices due to
     botched use of Qt.
+
+  [ Jonathan Riddell ]
+  * KDE frontend: Make QRadioButton less confused on the autopartitioning
+    page, using an extra frame.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Thu,  7 Dec 2006 09:55:28 +0000
 
